--- a/src/app/reading-group/reading-group.component.html
+++ b/src/app/reading-group/reading-group.component.html
@@ -113,61 +113,7 @@
         <div fxFlex="80" fxFlex.xs="96" fxLayout="column">
 
 
-          <div class="item" fxLayout="column">
-            <div fxLayout="row">
-              <h3>
-                <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2106.12575" target="_blank">
-                  Weisfeiler and Lehman Go Cellular: CW Networks</a></h3>
-            </div>
-            <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
-              <div>
-                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
-                7th of September 2021
-              </div>
-              <div>
-                <a>
-                  <fa-icon ngClass.gt-md="icon-right-margin--left" [icon]="authors"></fa-icon>
-                  Cristian Bodnar, Fabrizio Frasca, Nina Otter, Yu Guang Wang, Pietro Liò, Guido Montúfar, Michael
-                  Bronstein
-                </a>
-              </div>
-            </div>
-            <p class="paragraph">
-              <a class="slight-bold">Speaker:</a>
-              Joint first authors of the paper
-              <a href="https://crisbodnar.github.io/" target="_blank"
-                 class="link-style-green">Cristian Bodnar</a> and <a
-              href="https://scholar.google.com/citations?user=PT2CDA4AAAAJ&hl=en" target="_blank"
-              class="link-style-green">Fabrizio Frasca</a>. Cristian is a second-year PhD student
-              at Cambridge supervised by Prof. <a href="https://www.cl.cam.ac.uk/~pl219/" target="_blank"
-                                                  class="link-style-green">Pietro Liò</a>. He works on topological and
-              geometric deep learning. Fabrizio
-              is a PhD candidate at Imperial College London supervised by Prof. <a
-              href="https://www.imperial.ac.uk/people/m.bronstein" target="_blank"
-              class="link-style-green">Michael Bronstein</a> and he works as an ML
-              researcher at Twitter.
-            </p>
-            <p class="no-margin">
-              <a class="slight-bold">Abstract:</a>
-              Graph Neural Networks (GNNs) are limited in their expressive power, struggle with long-range interactions
-              and lack a principled way to model higher-order structures. These problems can be attributed to the strong
-              coupling between the computational graph and the input graph structure. The recently proposed Message
-              Passing Simplicial Networks naturally decouple these elements by performing message passing on the clique
-              complex of the graph. Nevertheless, these models are severely constrained by the rigid combinatorial
-              structure of Simplicial Complexes (SCs). In this work, we extend recent theoretical results on SCs to
-              regular Cell Complexes, topological objects that flexibly subsume SCs and graphs. We show that this
-              generalisation provides a powerful set of graph ``lifting'' transformations, each leading to a unique
-              hierarchical message passing procedure. The resulting methods, which we collectively call CW Networks
-              (CWNs), are strictly more powerful than the WL test and, in certain cases, not less powerful than the 3-WL
-              test. In particular, we demonstrate the effectiveness of one such scheme, based on rings, when applied to
-              molecular graph problems. The proposed architecture benefits from provably larger expressivity than
-              commonly used GNNs, principled modelling of higher-order signals and from compressing the distances
-              between nodes. We demonstrate that our model achieves state-of-the-art results on a variety of molecular
-              datasets.
-            </p>
-          </div>
 
-          <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
           <div class="item" fxLayout="column">
             <div fxLayout="row">
               <h3>
@@ -247,7 +193,7 @@
                  class="link-style-green">Dominique Beaini</a> who obtained his PhD at École Polytechnique de Montréal and is now working as ML Researcher at Valence Discovery on using GNNs for molecules.
               And <a href="https://www.linkedin.com/in/devin-kreuzer-847b52b5/" target="_blank"
                  class="link-style-green">Devin Kreuzer</a> who is doing his masters at McGill University supervised by Prof. <a href="https://williamleif.github.io/" target="_blank"
-                 class="link-style-green">William L. Hamilton</a> while working at MILA.
+                 class="link-style-green">William L. Hamilton</a> while working at MILA on GNNs and AI-enabled drug discovery.
             </p>
             <p class="no-margin">
               <a class="slight-bold">Abstract:</a>
@@ -423,30 +369,8 @@
             </p>
           </div>
 
+
           <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
-          <div class="item" fxLayout="column">
-            <div fxLayout="row">
-
-            </div>
-            <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
-              <div>
-                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
-                26th of October 2021
-              </div>
-
-            </div>
-            <p class="paragraph">
-              <a class="slight-bold">Speaker:</a>
-              Maybe you? If you want to present a paper (doesn't have to be yours) or you have someone who might be
-              interested in presenting his work then just write me a message on
-              <a href="https://join.slack.com/t/logag/shared_invite/zt-u0mbo1ec-zElmvd1oSCXGjXvxLSokvg" target="_blank"
-                 class="link-style-green">Slack</a>
-              or somewhere else!
-            </p>
-          </div>
-
-
-          <!--hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
           <div class="item" fxLayout="column">
             <div fxLayout="row">
               <h3>
@@ -456,7 +380,7 @@
             <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
               <div>
                 <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
-                21st of September 2021
+                26th of October 2021
               </div>
               <div>
                 <a>
@@ -489,7 +413,51 @@
               explicit discretisation schemes. We develop linear and nonlinear versions of GRAND, which achieve
               competitive results on many standard graph benchmarks.
             </p>
-          </div-->
+          </div>
+
+          <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
+          <div class="item" fxLayout="column">
+            <div fxLayout="row">
+
+            </div>
+            <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
+              <div>
+                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                26th of October 2021
+              </div>
+
+            </div>
+            <p class="paragraph">
+              <a class="slight-bold">Speaker:</a>
+              Maybe you? If you want to present a paper (doesn't have to be yours) or you have someone who might be
+              interested in presenting his work then just write me a message on
+              <a href="https://join.slack.com/t/logag/shared_invite/zt-u0mbo1ec-zElmvd1oSCXGjXvxLSokvg" target="_blank"
+                 class="link-style-green">Slack</a>
+              or somewhere else!
+            </p>
+          </div>
+
+          <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
+          <div class="item" fxLayout="column">
+            <div fxLayout="row">
+
+            </div>
+            <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
+              <div>
+                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                2nd of November 2021
+              </div>
+
+            </div>
+            <p class="paragraph">
+              <a class="slight-bold">Speaker:</a>
+              Maybe you? If you want to present a paper (doesn't have to be yours) or you have someone who might be
+              interested in presenting his work then just write me a message on
+              <a href="https://join.slack.com/t/logag/shared_invite/zt-u0mbo1ec-zElmvd1oSCXGjXvxLSokvg" target="_blank"
+                 class="link-style-green">Slack</a>
+              or somewhere else!
+            </p>
+          </div>
 
         </div>
         <div fxFlex="10" fxFlex.xs="2"></div>
@@ -510,6 +478,73 @@
       <div>
         <div fxFlex="10" fxFlex.xs="2"></div>
         <div fxFlex="80" fxFlex.xs="96" fxLayout="column">
+
+          <div class="item" fxLayout="column">
+            <div fxLayout="row">
+              <h3>
+                <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2106.12575" target="_blank">
+                  Weisfeiler and Lehman Go Cellular: CW Networks</a></h3>
+            </div>
+            <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
+              <div>
+                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                7th of September 2021
+              </div>
+              <div>
+                <a>
+                  <fa-icon ngClass.gt-md="icon-right-margin--left" [icon]="authors"></fa-icon>
+                  Cristian Bodnar, Fabrizio Frasca, Nina Otter, Yu Guang Wang, Pietro Liò, Guido Montúfar, Michael
+                  Bronstein
+                </a>
+              </div>
+            </div>
+            <p class="paragraph">
+              <a class="slight-bold">Resources:</a>
+              Cristian's and Fabrizio's slides
+              <a href="https://crisbodnar.github.io/files/cwn_logag_talk.pdf" target="_blank"
+                 class="link-style-green">Slides</a>. My
+              <a
+                href="https://hannes-stark.com/assets/Weisfeiler and Lehman Go Cellular CW Networks.pdf"
+                target="_blank"
+                class="link-style-green">Paper Annotations</a>.
+              (49 participants)
+            </p>
+            <p class="paragraph">
+              <a class="slight-bold">Speaker:</a>
+              Joint first authors of the paper
+              <a href="https://crisbodnar.github.io/" target="_blank"
+                 class="link-style-green">Cristian Bodnar</a> and <a
+              href="https://scholar.google.com/citations?user=PT2CDA4AAAAJ&hl=en" target="_blank"
+              class="link-style-green">Fabrizio Frasca</a>. Cristian is a second-year PhD student
+              at Cambridge supervised by Prof. <a href="https://www.cl.cam.ac.uk/~pl219/" target="_blank"
+                                                  class="link-style-green">Pietro Liò</a>. He works on topological and
+              geometric deep learning. Fabrizio
+              is a PhD candidate at Imperial College London supervised by Prof. <a
+              href="https://www.imperial.ac.uk/people/m.bronstein" target="_blank"
+              class="link-style-green">Michael Bronstein</a> and he works as an ML
+              researcher at Twitter.
+            </p>
+            <p class="no-margin">
+              <a class="slight-bold">Abstract:</a>
+              Graph Neural Networks (GNNs) are limited in their expressive power, struggle with long-range interactions
+              and lack a principled way to model higher-order structures. These problems can be attributed to the strong
+              coupling between the computational graph and the input graph structure. The recently proposed Message
+              Passing Simplicial Networks naturally decouple these elements by performing message passing on the clique
+              complex of the graph. Nevertheless, these models are severely constrained by the rigid combinatorial
+              structure of Simplicial Complexes (SCs). In this work, we extend recent theoretical results on SCs to
+              regular Cell Complexes, topological objects that flexibly subsume SCs and graphs. We show that this
+              generalisation provides a powerful set of graph ``lifting'' transformations, each leading to a unique
+              hierarchical message passing procedure. The resulting methods, which we collectively call CW Networks
+              (CWNs), are strictly more powerful than the WL test and, in certain cases, not less powerful than the 3-WL
+              test. In particular, we demonstrate the effectiveness of one such scheme, based on rings, when applied to
+              molecular graph problems. The proposed architecture benefits from provably larger expressivity than
+              commonly used GNNs, principled modelling of higher-order signals and from compressing the distances
+              between nodes. We demonstrate that our model achieves state-of-the-art results on a variety of molecular
+              datasets.
+            </p>
+          </div>
+
+          <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
 
 
           <div class="item" fxLayout="column">
