--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -124,9 +124,9 @@
                 H. Stärk, C. Dallago, M. Heinzinger, B. Rost
               </p>
               <p class="item-content">
-                Currently under review at
+                Accepted at
                 <a href="https://academic.oup.com/bioinformatics" target="_blank"
-                   class="link-style-green">Oxford UP Bioinformatics</a>.
+                   class="link-style-green">OUP Bioinformatics</a>.
                 Poster and talk at
                 <a href="https://icml-compbio.github.io/" target="_blank"
                    class="link-style-green">ICML 2021 Workshop on Computational Biology</a>.
@@ -459,6 +459,50 @@
                   that explains the architecture, its properties and the main applications in detail.
                 </p>
               </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- section -->
+      <div>
+        <div fxHide.lt-md>
+          <div fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign.lt-md="center center" fxLayoutAlign="center start">
+            <div fxFlex="30" fxLayoutAlign="end start" fxLayoutAlign.lt-md="center center">
+              <div fxFlex.gt-sm="200px" fxFlex.lt-md="100" ngClass.gt-sm="underline-title" ngClass.lt-md=""
+                   fxLayoutAlign.lt-md="center center">
+                <h1 class="left-titles">AWARDS</h1>
+              </div>
+            </div>
+            <div fxFlex="60">
+              <div fxFlex.lt-md="" fxFlex="70" class="underline-title" fxLayout="column"
+                   fxLayoutAlign.lt-md="center center">
+                <h1 class="left-titles--hidden">.</h1>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div fxHide.gt-sm ngClass.sm="small-margin" ngClass.xs="small-margin--xs" class="underline-title"
+             fxLayoutAlign="center center">
+          <h1 class="left-titles">AWARDS</h1>
+        </div>
+        <div ngClass.sm="small-margin" ngClass.xs="small-margin--xs" fxLayout="row" fxLayout.lt-md="column"
+             fxLayoutAlign.lt-md="center center"
+             fxLayoutAlign="center start">
+          <div fxFlex="30" fxLayoutAlign="end start" fxLayoutAlign.lt-md="center center">
+          </div>
+          <div fxFlex="60">
+            <div class="text-area" fxFlex.lt-md="" fxFlex="70" fxLayout="column" fxLayoutAlign.lt-md="center center">
+
+              <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
+                <p class="item-content">
+                  Highest prize money award at <a class="item-subtitle link-style-black" href="https://icml-compbio.github.io/"
+                       target="_blank">
+                      WCB ICML 2021</a>
+                </p>
+              </div>
+
+
 
             </div>
           </div>
