--- a/src/app/reading-group/reading-group.component.html
+++ b/src/app/reading-group/reading-group.component.html
@@ -219,12 +219,7 @@
 
             </div>
             <p class="paragraph">
-              <a class="slight-bold">Speaker:</a>
-              Maybe you? If you want to present a paper (doesn't have to be yours) or you have someone who might be
-              interested in presenting his work then just write me a message on
-              <a href="https://join.slack.com/t/logag/shared_invite/zt-u0mbo1ec-zElmvd1oSCXGjXvxLSokvg" target="_blank"
-                 class="link-style-green">Slack</a>
-              or somewhere else!
+              No meeting since the ICLR deadline is 9h after our session would start. Good luck to everyone who is submitting a paper!
             </p>
           </div>
 
