--- a/src/app/reading-group/reading-group.component.html
+++ b/src/app/reading-group/reading-group.component.html
@@ -117,52 +117,7 @@
 
 
 
-          <div class="item" fxLayout="column">
-            <div fxLayout="row">
-              <h3>
-                <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2106.03893" target="_blank">
-                  Rethinking Graph Transformers with Spectral Attention</a></h3>
-            </div>
-            <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
-              <div>
-                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
-                21st of September 2021
-              </div>
-              <div>
-                <a>
-                  <fa-icon ngClass.gt-md="icon-right-margin--left" [icon]="authors"></fa-icon>
-                  Devin Kreuzer, Dominique Beaini, William L. Hamilton, Vincent Létourneau, Prudencio Tossou
-                </a>
-              </div>
-            </div>
-            <p class="paragraph">
-              <a class="slight-bold">Speaker:</a>
-              Joint first authors of the paper: Dr.
-              <a href="https://www.linkedin.com/in/dbeaini/" target="_blank"
-                 class="link-style-green">Dominique Beaini</a> who obtained his PhD at École Polytechnique de Montréal and is now working as ML Researcher at Valence Discovery on using GNNs for molecules.
-              And <a href="https://www.linkedin.com/in/devin-kreuzer-847b52b5/" target="_blank"
-                 class="link-style-green">Devin Kreuzer</a> who is doing his masters at McGill University supervised by Prof. <a href="https://williamleif.github.io/" target="_blank"
-                 class="link-style-green">William L. Hamilton</a> while working at MILA on GNNs and AI-enabled drug discovery.
-            </p>
-            <p class="no-margin">
-              <a class="slight-bold">Abstract:</a>
-              In recent years, the Transformer architecture has proven to be very successful in sequence processing, but
-              its application to other data structures, such as graphs, has remained limited due to the difficulty of
-              properly defining positions. Here, we present the Spectral Attention Network (SAN), which uses a learned
-              positional encoding (LPE) that can take advantage of the full Laplacian spectrum to learn the position of
-              each node in a given graph. This LPE is then added to the node features of the graph and passed to a
-              fully-connected Transformer. By leveraging the full spectrum of the Laplacian, our model is theoretically
-              powerful in distinguishing graphs, and can better detect similar sub-structures from their resonance.
-              Further, by fully connecting the graph, the Transformer does not suffer from over-squashing, an
-              information bottleneck of most GNNs, and enables better modeling of physical phenomenons such as heat
-              transfer and electric interaction. When tested empirically on a set of 4 standard datasets, our model
-              performs on par or better than state-of-the-art GNNs, and outperforms any attention-based model by a wide
-              margin, becoming the first fully-connected architecture to perform well on graph benchmarks.
-            </p>
-          </div>
 
-
-          <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
           <div class="item" fxLayout="column">
             <div fxLayout="row">
               <h3>
@@ -403,7 +358,59 @@
         <div fxFlex="80" fxFlex.xs="96" fxLayout="column">
 
 
+          <div class="item" fxLayout="column">
+            <div fxLayout="row">
+              <h3>
+                <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2106.03893" target="_blank">
+                  Rethinking Graph Transformers with Spectral Attention</a></h3>
+            </div>
+            <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
+              <div>
+                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                21st of September 2021
+              </div>
+              <div>
+                <a>
+                  <fa-icon ngClass.gt-md="icon-right-margin--left" [icon]="authors"></fa-icon>
+                  Devin Kreuzer, Dominique Beaini, William L. Hamilton, Vincent Létourneau, Prudencio Tossou
+                </a>
+              </div>
+            </div>
+            <p class="paragraph">
+              <a class="slight-bold">Resources:</a>
+              Devin's
+              <a href="https://hannes-stark.com/assets/spectral_attention_networks.pdf" target="_blank"
+                 class="link-style-green">slides</a>. Recording is coming soon!
+              (69 participants)
+            </p>
+            <p class="paragraph">
+              <a class="slight-bold">Speaker:</a>
+              Joint first authors of the paper: Dr.
+              <a href="https://www.linkedin.com/in/dbeaini/" target="_blank"
+                 class="link-style-green">Dominique Beaini</a> who obtained his PhD at École Polytechnique de Montréal and is now working as ML Researcher at Valence Discovery on using GNNs for molecules.
+              And <a href="https://www.linkedin.com/in/devin-kreuzer-847b52b5/" target="_blank"
+                 class="link-style-green">Devin Kreuzer</a> who is doing his masters at McGill University supervised by Prof. <a href="https://williamleif.github.io/" target="_blank"
+                 class="link-style-green">William L. Hamilton</a> while working at MILA on GNNs and AI-enabled drug discovery.
+            </p>
+            <p class="no-margin">
+              <a class="slight-bold">Abstract:</a>
+              In recent years, the Transformer architecture has proven to be very successful in sequence processing, but
+              its application to other data structures, such as graphs, has remained limited due to the difficulty of
+              properly defining positions. Here, we present the Spectral Attention Network (SAN), which uses a learned
+              positional encoding (LPE) that can take advantage of the full Laplacian spectrum to learn the position of
+              each node in a given graph. This LPE is then added to the node features of the graph and passed to a
+              fully-connected Transformer. By leveraging the full spectrum of the Laplacian, our model is theoretically
+              powerful in distinguishing graphs, and can better detect similar sub-structures from their resonance.
+              Further, by fully connecting the graph, the Transformer does not suffer from over-squashing, an
+              information bottleneck of most GNNs, and enables better modeling of physical phenomenons such as heat
+              transfer and electric interaction. When tested empirically on a set of 4 standard datasets, our model
+              performs on par or better than state-of-the-art GNNs, and outperforms any attention-based model by a wide
+              margin, becoming the first fully-connected architecture to perform well on graph benchmarks.
+            </p>
+          </div>
 
+
+          <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
 
           <div class="item" fxLayout="column">
             <div fxLayout="row">
