add SCM paper by matej and petar

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -22,7 +22,7 @@
             My main interests are graph representation learning, symmetry-aware architectures, and self-supervised
             learning.
             <br>
-            I am extremely grateful to the ML community and my great supervisors that helped me in my research
+            Many thanks to the ML community and my great supervisors that helped me in my research
             <a (click)="scroll('projects')" class="link-style-green">projects</a>
             through which I found my passion for research.
             <br>
@@ -317,8 +317,8 @@
             <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
               <a class="item-title">Master's <a href="https://hannes-stark.com/assets/Hannes_Thesis.pdf"
-                      target="_blank"
-                      class="link-style-green">Thesis</a> on Graph Representation Learning</a>
+                                                target="_blank"
+                                                class="link-style-green">Thesis</a> on Graph Representation Learning</a>
               <div fxLayout="row">
                 <h3>
                   <a class="item-subtitle link-style-black" href="https://www.cl.cam.ac.uk/~pl219/" target="_blank">
@@ -340,20 +340,23 @@
                 My <a href="https://hannes-stark.com/assets/Hannes_Thesis.pdf"
                       target="_blank"
                       class="link-style-green">Thesis</a> about a new 3D pre-training method for GNNs to improve their
-                molecular property predictions for molecules with unknown 3D geometry.
+                molecular property predictions for molecules with unknown 3D geometry. <a
+                href="https://github.com/HannesStark/3D-graph-ssl"
+                target="_blank"
+                class="link-style-green">Code</a>
               </p>
               <div fxLayout="column" fxLayoutGap="5px">
-                  <div fxLayout="row" fxLayoutGap="5px" fxLayoutAlign="center center">
-                    <div fxFlex="50" class="video-container">
-                      <div class="responsive video">
-                        <iframe [src]='safeURL3DPretrain' allowfullscreen></iframe>
-                      </div>
+                <div fxLayout="row" fxLayoutGap="5px" fxLayoutAlign="center center">
+                  <div fxFlex="50" class="video-container">
+                    <div class="responsive video">
+                      <iframe [src]='safeURL3DPretrain' allowfullscreen></iframe>
                     </div>
-                    <img class="previewable-image" fxFlex="50" (click)="openPretrainImage()"
-                         src="assets/visual_abstract.png"
-                         alt="image at full size">
                   </div>
+                  <img class="previewable-image" fxFlex="50" (click)="openPretrainImage()"
+                       src="assets/visual_abstract.png"
+                       alt="image at full size">
                 </div>
+              </div>
             </div>
             <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
@@ -496,12 +499,12 @@
 
               <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
                 <p class="item-content">
-                  Highest prize money award at <a class="item-subtitle link-style-black" href="https://icml-compbio.github.io/"
-                       target="_blank">
-                      WCB ICML 2021</a>
+                  Highest prize money award at <a class="item-subtitle link-style-black"
+                                                  href="https://icml-compbio.github.io/"
+                                                  target="_blank">
+                  WCB ICML 2021</a>
                 </p>
               </div>
-
 
 
             </div>
