--- a/src/app/reading-group/reading-group.component.html
+++ b/src/app/reading-group/reading-group.component.html
@@ -31,7 +31,13 @@
             class="link-style-green">Slack Workspace</a>: For discussions outside of our meetings and to vote for
           papers.
         </p>
-
+        <p>
+          Watch our
+          <a
+            href="https://www.youtube.com/channel/UC4uWMmEGc5EZVn5pAox-iww/videos"
+            target="_blank"
+            class="link-style-green">recorded meetings</a>!
+        </p>
         <p>
           You can also subscribe to the meetings via <a
           href="https://calendar.google.com/calendar/u/0?cid=dmR1am4ycGJwa2hncjVmNTVjbTM5cWJtdThAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ"
@@ -96,7 +102,103 @@
 
   <div fxLayout="column" class="width100">
     <!-- section 0 -->
+    <div>
+      <div>
+        <div fxFlex="10" fxFlex.xs="2"></div>
+        <div fxFlex="80" fxFlex.xs="96" class="underline-title">
+          <h1 class="left-titles">LATEST VIDEO</h1>
+        </div>
+        <div fxFlex="10" fxFlex.xs="2"></div>
+      </div>
 
+
+      <div>
+        <div fxFlex="10" fxFlex.xs="2"></div>
+        <div fxFlex="80" fxFlex.xs="96" fxLayout="column">
+          <div class="item" fxLayout="column">
+            <div fxLayout="row">
+              <h3>
+                <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2106.12575" target="_blank">
+                  Weisfeiler and Lehman Go Cellular: CW Networks</a></h3>
+            </div>
+            <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
+              <div>
+                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                7th of September 2021
+              </div>
+              <div>
+                <a>
+                  <fa-icon ngClass.gt-md="icon-right-margin--left" [icon]="authors"></fa-icon>
+                  Cristian Bodnar, Fabrizio Frasca, Nina Otter, Yu Guang Wang, Pietro Liò, Guido Montúfar, Michael
+                  Bronstein
+                </a>
+              </div>
+            </div>
+
+
+            <div>
+              <iframe ngClass.gt-sm="float-right" [src]='safeURLCWNetworks' allowfullscreen></iframe>
+              <p class="paragraph">
+                <a class="slight-bold">Resources:</a>
+                The <a href="https://youtu.be/MTQGNVTn9lQ" target="_blank"
+                       class="link-style-green">Recording</a> of the whole presentation.
+                Cristian's and Fabrizio's slides
+                <a href="https://crisbodnar.github.io/files/cwn_logag_talk.pdf" target="_blank"
+                   class="link-style-green">Slides</a>. My
+                <a
+                  href="https://hannes-stark.com/assets/Weisfeiler and Lehman Go Cellular CW Networks.pdf"
+                  target="_blank"
+                  class="link-style-green">Paper Annotations</a>.
+                (49 participants)
+              </p>
+              <p class="paragraph">
+                <a class="slight-bold">Speaker:</a>
+                Joint first authors of the paper
+                <a href="https://crisbodnar.github.io/" target="_blank"
+                   class="link-style-green">Cristian Bodnar</a> and <a
+                href="https://scholar.google.com/citations?user=PT2CDA4AAAAJ&hl=en" target="_blank"
+                class="link-style-green">Fabrizio Frasca</a>. Cristian is a second-year PhD student
+                at Cambridge supervised by Prof. <a href="https://www.cl.cam.ac.uk/~pl219/" target="_blank"
+                                                    class="link-style-green">Pietro Liò</a>. He works on topological and
+                geometric deep learning. Fabrizio
+                is a PhD candidate at Imperial College London supervised by Prof. <a
+                href="https://www.imperial.ac.uk/people/m.bronstein" target="_blank"
+                class="link-style-green">Michael Bronstein</a> and he works as an ML
+                researcher at Twitter.
+              </p>
+              <p class="no-margin">
+                <a class="slight-bold">Abstract:</a>
+                Graph Neural Networks (GNNs) are limited in their expressive power, struggle with long-range
+                interactions
+                and lack a principled way to model higher-order structures. These problems can be attributed to the
+                strong
+                coupling between the computational graph and the input graph structure. The recently proposed Message
+                Passing Simplicial Networks naturally decouple these elements by performing message passing on the
+                clique
+                complex of the graph. Nevertheless, these models are severely constrained by the rigid combinatorial
+                structure of Simplicial Complexes (SCs). In this work, we extend recent theoretical results on SCs to
+                regular Cell Complexes, topological objects that flexibly subsume SCs and graphs. We show that this
+                generalisation provides a powerful set of graph ``lifting'' transformations, each leading to a unique
+                hierarchical message passing procedure. The resulting methods, which we collectively call CW Networks
+                (CWNs), are strictly more powerful than the WL test and, in certain cases, not less powerful than the
+                3-WL
+                test. In particular, we demonstrate the effectiveness of one such scheme, based on rings, when applied
+                to
+                molecular graph problems. The proposed architecture benefits from provably larger expressivity than
+                commonly used GNNs, principled modelling of higher-order signals and from compressing the distances
+                between nodes. We demonstrate that our model achieves state-of-the-art results on a variety of
+                molecular
+                datasets.
+              </p>
+
+            </div>
+
+          </div>
+
+        </div>
+        <div fxFlex="10" fxFlex.xs="2"></div>
+      </div>
+    </div>
 
     <div>
       <div>
@@ -111,11 +213,6 @@
       <div>
         <div fxFlex="10" fxFlex.xs="2"></div>
         <div fxFlex="80" fxFlex.xs="96" fxLayout="column">
-
-
-
-
-
 
 
           <div class="item" fxLayout="column">
@@ -174,7 +271,8 @@
 
             </div>
             <p class="paragraph">
-              No meeting since the ICLR deadline is 9h after our session would start. Good luck to everyone who is submitting a paper!
+              No meeting since the ICLR deadline is 9h after our session would start. Good luck to everyone who is
+              submitting a paper!
             </p>
           </div>
 
@@ -337,6 +435,47 @@
             </p>
           </div>
 
+          <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
+          <div class="item" fxLayout="column">
+            <div fxLayout="row">
+              <h3>
+                <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2109.04173" target="_blank">
+                  Relating Graph Neural Networks to Structural Causal Model</a></h3>
+            </div>
+            <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
+              <div>
+                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                9th of November 2021
+              </div>
+              <div>
+                <a>
+                  <fa-icon ngClass.gt-md="icon-right-margin--left" [icon]="authors"></fa-icon>
+                  Matej Zečević, Devendra Singh Dhami, Petar Veličković, Kristian Kersting
+                </a>
+              </div>
+            </div>
+            <p class="paragraph">
+              <a class="slight-bold">Speaker:</a>
+              First author <a class="item-subtitle link-style-black" href="https://matej-zecevic.de/" target="_blank">
+                  Matej Zečević</a> who is a PhD student at TU Darmstadt working with Prof. <a class="item-subtitle link-style-black" href="https://ml-research.github.io/people/kkersting/index.html" target="_blank">
+                  Kristian Kersting</a> on
+              RL, robotics, and causality in ML after doing his M.Sc. with Prof. <a class="item-subtitle link-style-black" href="https://www.is.mpg.de/~bs" target="_blank">
+                  Bernhard Schölkopf</a> at MPI Tübingen.
+            </p>
+            <p class="no-margin">
+              <a class="slight-bold">Abstract:</a>
+              Causality can be described in terms of a structural causal model (SCM) that carries information on the
+              variables of interest and their mechanistic relations. For most processes of interest the underlying SCM
+              will only be partially observable, thus causal inference tries to leverage any exposed information. Graph
+              neural networks (GNN) as universal approximators on structured input pose a viable candidate for causal
+              learning, suggesting a tighter integration with SCM. To this effect we present a theoretical analysis from
+              first principles that establishes a novel connection between GNN and SCM while providing an extended view
+              on general neural-causal models. We then establish a new model class for GNN-based causal inference that
+              is necessary and sufficient for causal effect identification. Our empirical illustration on simulations
+              and standard benchmarks validate our theoretical proofs.
+            </p>
+          </div>
+
         </div>
         <div fxFlex="10" fxFlex.xs="2"></div>
       </div>
@@ -387,10 +526,13 @@
               <a class="slight-bold">Speaker:</a>
               Joint first authors of the paper: Dr.
               <a href="https://www.linkedin.com/in/dbeaini/" target="_blank"
-                 class="link-style-green">Dominique Beaini</a> who obtained his PhD at École Polytechnique de Montréal and is now working as ML Researcher at Valence Discovery on using GNNs for molecules.
+                 class="link-style-green">Dominique Beaini</a> who obtained his PhD at École Polytechnique de Montréal
+              and is now working as ML Researcher at Valence Discovery on using GNNs for molecules.
               And <a href="https://www.linkedin.com/in/devin-kreuzer-847b52b5/" target="_blank"
-                 class="link-style-green">Devin Kreuzer</a> who is doing his masters at McGill University supervised by Prof. <a href="https://williamleif.github.io/" target="_blank"
-                 class="link-style-green">William L. Hamilton</a> while working at MILA on GNNs and AI-enabled drug discovery.
+                     class="link-style-green">Devin Kreuzer</a> who is doing his masters at McGill University supervised
+              by Prof. <a href="https://williamleif.github.io/" target="_blank"
+                          class="link-style-green">William L. Hamilton</a> while working at MILA on GNNs and AI-enabled
+              drug discovery.
             </p>
             <p class="no-margin">
               <a class="slight-bold">Abstract:</a>
@@ -434,8 +576,9 @@
               <a class="slight-bold">Resources:</a>
               Giorgos's slides as
               <a href="https://hannes-stark.com/assets/PnC_slides_logag.pdf" target="_blank"
-                 class="link-style-green">pdf</a> or  <a href="https://hannes-stark.com/assets/PnC_slides_logag.key" target="_blank"
-                 class="link-style-green">keynote</a>.
+                 class="link-style-green">pdf</a> or <a href="https://hannes-stark.com/assets/PnC_slides_logag.key"
+                                                        target="_blank"
+                                                        class="link-style-green">keynote</a>.
               (67 participants)
             </p>
             <p class="paragraph">
@@ -493,52 +636,65 @@
                 </a>
               </div>
             </div>
-            <p class="paragraph">
-              <a class="slight-bold">Resources:</a>
-              The <a href="https://youtu.be/MTQGNVTn9lQ" target="_blank"
-                 class="link-style-green">Recording</a> of the whole presentation.
-              Cristian's and Fabrizio's slides
-              <a href="https://crisbodnar.github.io/files/cwn_logag_talk.pdf" target="_blank"
-                 class="link-style-green">Slides</a>. My
-              <a
-                href="https://hannes-stark.com/assets/Weisfeiler and Lehman Go Cellular CW Networks.pdf"
-                target="_blank"
-                class="link-style-green">Paper Annotations</a>.
-              (49 participants)
-            </p>
-            <p class="paragraph">
-              <a class="slight-bold">Speaker:</a>
-              Joint first authors of the paper
-              <a href="https://crisbodnar.github.io/" target="_blank"
-                 class="link-style-green">Cristian Bodnar</a> and <a
-              href="https://scholar.google.com/citations?user=PT2CDA4AAAAJ&hl=en" target="_blank"
-              class="link-style-green">Fabrizio Frasca</a>. Cristian is a second-year PhD student
-              at Cambridge supervised by Prof. <a href="https://www.cl.cam.ac.uk/~pl219/" target="_blank"
-                                                  class="link-style-green">Pietro Liò</a>. He works on topological and
-              geometric deep learning. Fabrizio
-              is a PhD candidate at Imperial College London supervised by Prof. <a
-              href="https://www.imperial.ac.uk/people/m.bronstein" target="_blank"
-              class="link-style-green">Michael Bronstein</a> and he works as an ML
-              researcher at Twitter.
-            </p>
-            <p class="no-margin">
-              <a class="slight-bold">Abstract:</a>
-              Graph Neural Networks (GNNs) are limited in their expressive power, struggle with long-range interactions
-              and lack a principled way to model higher-order structures. These problems can be attributed to the strong
-              coupling between the computational graph and the input graph structure. The recently proposed Message
-              Passing Simplicial Networks naturally decouple these elements by performing message passing on the clique
-              complex of the graph. Nevertheless, these models are severely constrained by the rigid combinatorial
-              structure of Simplicial Complexes (SCs). In this work, we extend recent theoretical results on SCs to
-              regular Cell Complexes, topological objects that flexibly subsume SCs and graphs. We show that this
-              generalisation provides a powerful set of graph ``lifting'' transformations, each leading to a unique
-              hierarchical message passing procedure. The resulting methods, which we collectively call CW Networks
-              (CWNs), are strictly more powerful than the WL test and, in certain cases, not less powerful than the 3-WL
-              test. In particular, we demonstrate the effectiveness of one such scheme, based on rings, when applied to
-              molecular graph problems. The proposed architecture benefits from provably larger expressivity than
-              commonly used GNNs, principled modelling of higher-order signals and from compressing the distances
-              between nodes. We demonstrate that our model achieves state-of-the-art results on a variety of molecular
-              datasets.
-            </p>
+
+
+            <div>
+              <iframe ngClass.gt-sm="float-right" [src]='safeURLCWNetworks' allowfullscreen></iframe>
+              <p class="paragraph">
+                <a class="slight-bold">Resources:</a>
+                The <a href="https://youtu.be/MTQGNVTn9lQ" target="_blank"
+                       class="link-style-green">Recording</a> of the whole presentation.
+                Cristian's and Fabrizio's slides
+                <a href="https://crisbodnar.github.io/files/cwn_logag_talk.pdf" target="_blank"
+                   class="link-style-green">Slides</a>. My
+                <a
+                  href="https://hannes-stark.com/assets/Weisfeiler and Lehman Go Cellular CW Networks.pdf"
+                  target="_blank"
+                  class="link-style-green">Paper Annotations</a>.
+                (49 participants)
+              </p>
+              <p class="paragraph">
+                <a class="slight-bold">Speaker:</a>
+                Joint first authors of the paper
+                <a href="https://crisbodnar.github.io/" target="_blank"
+                   class="link-style-green">Cristian Bodnar</a> and <a
+                href="https://scholar.google.com/citations?user=PT2CDA4AAAAJ&hl=en" target="_blank"
+                class="link-style-green">Fabrizio Frasca</a>. Cristian is a second-year PhD student
+                at Cambridge supervised by Prof. <a href="https://www.cl.cam.ac.uk/~pl219/" target="_blank"
+                                                    class="link-style-green">Pietro Liò</a>. He works on topological and
+                geometric deep learning. Fabrizio
+                is a PhD candidate at Imperial College London supervised by Prof. <a
+                href="https://www.imperial.ac.uk/people/m.bronstein" target="_blank"
+                class="link-style-green">Michael Bronstein</a> and he works as an ML
+                researcher at Twitter.
+              </p>
+              <p class="no-margin">
+                <a class="slight-bold">Abstract:</a>
+                Graph Neural Networks (GNNs) are limited in their expressive power, struggle with long-range
+                interactions
+                and lack a principled way to model higher-order structures. These problems can be attributed to the
+                strong
+                coupling between the computational graph and the input graph structure. The recently proposed Message
+                Passing Simplicial Networks naturally decouple these elements by performing message passing on the
+                clique
+                complex of the graph. Nevertheless, these models are severely constrained by the rigid combinatorial
+                structure of Simplicial Complexes (SCs). In this work, we extend recent theoretical results on SCs to
+                regular Cell Complexes, topological objects that flexibly subsume SCs and graphs. We show that this
+                generalisation provides a powerful set of graph ``lifting'' transformations, each leading to a unique
+                hierarchical message passing procedure. The resulting methods, which we collectively call CW Networks
+                (CWNs), are strictly more powerful than the WL test and, in certain cases, not less powerful than the
+                3-WL
+                test. In particular, we demonstrate the effectiveness of one such scheme, based on rings, when applied
+                to
+                molecular graph problems. The proposed architecture benefits from provably larger expressivity than
+                commonly used GNNs, principled modelling of higher-order signals and from compressing the distances
+                between nodes. We demonstrate that our model achieves state-of-the-art results on a variety of
+                molecular
+                datasets.
+              </p>
+
+            </div>
+
           </div>
 
           <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
