--- a/src/app/reading-group/reading-group.component.scss
+++ b/src/app/reading-group/reading-group.component.scss
@@ -7,11 +7,19 @@
 .responsive {
   position: relative;
   display: block;
-  height: 0;
-  padding: 0;
-  overflow: hidden;
-}
 
+}
+.float-right {
+  top: 0;
+  left: 0;
+  bottom: 0;
+  border: 0;
+  float: left;
+  display: block;
+  width: 320px;
+  height: 180px;
+  margin-right: 10px;
+}
 
 .responsive iframe {
   position: absolute;
