--- a/src/app/reading-group/reading-group.component.html
+++ b/src/app/reading-group/reading-group.component.html
@@ -200,7 +200,7 @@
       </div>
     </div>
 
-    <div>
+    <div class="top-margin">
       <div>
         <div fxFlex="10" fxFlex.xs="2"></div>
         <div fxFlex="80" fxFlex.xs="96" class="underline-title">
@@ -457,10 +457,18 @@
             <p class="paragraph">
               <a class="slight-bold">Speaker:</a>
               First author <a class="item-subtitle link-style-black" href="https://matej-zecevic.de/" target="_blank">
-                  Matej Zečević</a> who is a PhD student at TU Darmstadt working with Prof. <a class="item-subtitle link-style-black" href="https://ml-research.github.io/people/kkersting/index.html" target="_blank">
-                  Kristian Kersting</a> on
-              RL, robotics, and causality in ML after doing his M.Sc. with Prof. <a class="item-subtitle link-style-black" href="https://www.is.mpg.de/~bs" target="_blank">
-                  Bernhard Schölkopf</a> at MPI Tübingen.
+              Matej Zečević</a>  who is a PhD candidate at TU Darmstadt working with <a
+              class="item-subtitle link-style-black" href="https://ml-research.github.io/people/kkersting/index.html"
+              target="_blank">
+              Kristian Kersting</a> on
+              Causality for ML. Before that, he completed his M.Sc. in Computer Science under <a
+              class="item-subtitle link-style-black" href="https://www.ias.informatik.tu-darmstadt.de/Member/JanPeters" target="_blank">
+              Jan Peters</a>, <a
+              class="item-subtitle link-style-black" href="https://cifar.ca/bios/stefan-bauer/" target="_blank">
+              Stefan Bauer</a>,
+              and <a
+              class="item-subtitle link-style-black" href="https://www.is.mpg.de/~bs" target="_blank">
+              Bernhard Schölkopf</a> at MPI for Intelligent Systems (Tübingen).
             </p>
             <p class="no-margin">
               <a class="slight-bold">Abstract:</a>
